--- a/FakeBook/style.css
+++ b/FakeBook/style.css
@@ -1,5 +1,5 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Courier New', Courier, monospace;
 }
