--- a/FakeBook/style.css
+++ b/FakeBook/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 10%;
-    padding: 10%;
+    margin: 10px;
+    padding: 10px;
     font-family:'Courier New', Courier, monospace;
 }
 body{
