--- a/FakeBook/style.css
+++ b/FakeBook/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 10px;
     padding: 10px;
-    font-family:'Courier New', Courier, monospace;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 body{
     background: turquoise;
