--- a/FakeBook/style.css
+++ b/FakeBook/style.css
@@ -1,6 +1,4 @@
 *{
-    margin: 10px;
-    padding: 10px;
     font-family: 'Courier New', Courier, monospace;
 }
 body{
@@ -9,4 +7,14 @@ body{
 
 .updates {
     margin-left: 80px;
+}
+
+.updates-header {
+    margin-left: 80px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.updates li{
+    font-style: italic;
+    font-family: 'Handlee', cursive;
 }
